# sync-client

./: .gitignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  sync-client-spec.md  tsconfig.json  tsconfig.node.json
.github/workflows/: release.yml
migrations/: 001_init.sql
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: fs_watcher.rs  mod.rs  rclone_mgr.rs  task_engine.rs
src/components/: MainLayout.tsx  Sidebar.tsx  StatusBar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  select.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx
src/lib/: api.ts  types.ts  utils.ts
src/pages/: ConfigPage.tsx  DiffPage.tsx  FileBrowserPage.tsx  LogsPage.tsx  SettingsPage.tsx  TasksPage.tsx
src/stores/: configStore.ts  fileStore.ts  logStore.ts  settingsStore.ts  taskStore.ts
