[package]
name = "sync-client"
version = "0.1.0"
description = "Cross-platform file sync client based on rclone"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
notify = "7"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
